[package]
name = "mathy_core"
version = "0.0.0"
description = "Mathy core library"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
pom = "3.2.0"
derivative = "2.2.0"
num = "0.4.0"
dimensioned = "0.8.0"
nalgebra = "0.32.1"
